--- a/index.html
+++ b/index.html
@@ -21,6 +21,33 @@
 
 	<div class="container-fluid">
 
+		<div class="row">
+
+			<div class="col-xs-3"></div>
+
+			<div class="col-xs-6 well main-well">
+				
+				<h1 class="text-center">It's awesome outside</h1>
+
+			</div>
+
+			<div class="col-xs-3-"></div>
+
+		</div>
+
+		<div class="row">
+			<div class="col-xs-5"></div>
+
+			<div class="col-xs-1">
+				<button class="btn btn-primary btn-block">Celsius</button>
+			</div>
+
+			<div class="col-xs-1">
+				<button class="btn btn-danger btn-block">Fahrenheit</button>
+			</div>
+
+			<div class="col-xs-5"></div>
+		</div>
 		
 	</div>
 
@@ -29,6 +56,7 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-	<script src="getQuotes.js" type="text/javascript"></script>
+	<!-- Custom javascript includes -->
+	<script src="weather.js" type="text/javascript"></script>
 </body>
 </html>
