--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 				
 				<h1 class="text-center">It's awesome outside</h1>
 
+				<div class="row">
+					<div class="col-xs-4"><h3 id="temperature"></h3></div>
+					<div class="col-xs-4" id="icon">  </div>
+					<div class="col-xs-4"><h3 class="pull-right" id="description">Rain in Dallas</h3></div>
+
+				</div>
+
 			</div>
 
 			<div class="col-xs-3-"></div>
