--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 			<div class="col-xs-6 well main-well">
 				
-				<h1 class="text-center">It's awesome outside</h1>
+				<h1 class="text-center" id="headline">It's awesome outside</h1>
 
 				<div class="row">
 					<div class="col-xs-4"><h3 id="temperature"></h3></div>
@@ -46,11 +46,11 @@
 			<div class="col-xs-5"></div>
 
 			<div class="col-xs-1">
-				<button class="btn btn-primary btn-block">Celsius</button>
+				<button class="btn btn-primary btn-block" id="cButton">Celsius</button>
 			</div>
 
 			<div class="col-xs-1">
-				<button class="btn btn-danger btn-block">Fahrenheit</button>
+				<button class="btn btn-danger btn-block" id="fButton">Fahrenheit</button>
 			</div>
 
 			<div class="col-xs-5"></div>
